--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,8 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="content_title">Favorite Added</string>
-    <string name="content_text">Your favorite lyric added</string>
+    <string name="content_title">Lirik Lagu</string>
+    <string name="content_text">Lirik Lagu App sedang berjalan</string>
     <string name="subtext">Lirik Lagu</string>
 
     <string name="title">Judul Lagu</string>
